# tangramlit_dev

./: .gitattributes  .gitignore  .vscode  README.md  ablate_lambda_d.py  ablation_study_script.py  addition_study_script.py  compare_ablation_score.py  full_module_test.py  full_module_test_old.py  model_trainval_script.py  optuna_tune.py  optuna_tune_cli.py  pyproject.toml  requirements.txt  test_script.py  test_script_shared.py  train_config.yaml
Notebooks/: dataset1_data_pp.ipynb  dataset1_trainval.ipynb  dataset2_data_pp.ipynb  dataset2_trainval.ipynb  dataset3_data_pp.ipynb  dataset3_trainval.ipynb  dataset4_data_pp.ipynb  dataset4_trainval.ipynb  dataset5_data_pp.ipynb  dataset5_trainval.ipynb  dataset6_data_pp.ipynb  dataset6_trainval.ipynb  dataset8_data_pp.ipynb  dataset8_trainval.ipynb  dataset9_data_pp.ipynb  dataset9_trainval.ipynb  tangramlit_trainval.ipynb  vanilla_model_analysis.ipynb
assessment/: get_auc_heatmap.py  get_score_boxplots.py
benchmarking/: bench_data_full.xlsx  bench_data_train_only.xlsx  benchmark_ablation.py  benchmark_addition.py  benchmark_methods.py  subset_train_genes.py
scripts/: test_analysis.py  test_spatial_binning.py
src/tangramlit/: __init__.py
src/tangramlit/analysis/: __init__.py  annotation.py  cells_filter.py  deterministic_mapping.py  plot_losses.py  plot_scores.py  training_genes.py
src/tangramlit/cli/: main.py  (+3 more)
tangramlit/: __init__.py  analysis_utils.py  mapping_datamodule.py  mapping_lightningmodule.py  mapping_utils.py  plot_utils.py  tuning_utils.py  utils.py  validation_metrics.py
tests/: test_optuna.py
(+22 files in other folders)
