[project]
name = "tangramlit-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.17"
dependencies = [
    "anndata==0.11.4",
    "ipykernel==6.29.5",
    "jupyterlab==4.4.3",
    "lightning==2.5.1.post0",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "matplotlib-scalebar==0.9.0",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "scanpy==1.11.1",
    "scikit-image==0.25.2",
    "scikit-learn==1.5.2",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "spatialdata==0.3.0",
    "squidpy==1.6.5",
    "tensorboard==2.20.0",
    "torch==2.7.0",
    "torchmetrics==1.7.2",
    "tqdm==4.67.1",
    "xarray-dataclasses==1.9.1",
]
